Design endpoints in swagger. Implement endpoints with mock repository. Add h2 and flyway (not used yet)
